environments/dev/apps/app-kam-service/services/kam-service/base/config/100-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: kam-service
    app.kubernetes.io/part-of: app-kam-service
  name: kam-service
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kam-service
      app.kubernetes.io/part-of: app-kam-service
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/name: kam-service
        app.kubernetes.io/part-of: app-kam-service
    spec:
      containers:
      - image: nginxinc/nginx-unprivileged:latest
        imagePullPolicy: Always
        name: kam-service
        ports:
        - containerPort: 8080
        resources: {}
      serviceAccountName: default
status: {}
