environments/dev/apps/app-kam-service/services/kam-service/base/config/200-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: kam-service
    app.kubernetes.io/part-of: app-kam-service
  name: kam-service
  namespace: dev
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: kam-service
    app.kubernetes.io/part-of: app-kam-service
status:
  loadBalancer: {}
