environments/dev/apps/app-kam-service/services/kam-service/base/config/300-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  name: kam-service
  namespace: dev
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: kam-service
    weight: 100
  wildcardPolicy: None
